Fixed overflow when adding more than 10 or 12 tasks.

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 h1 {
   color: rgb(179, 131, 226);
-  font-size: 10rem;
+  font-size: 5rem;
   text-align: center;
   opacity: 0.4;
 }
@@ -27,7 +27,8 @@ h1 {
 form {
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   max-width: 100%;
-  width: 400px;
+  width: 500px;
+  overflow-y: auto;
 }
 
 .input {
@@ -96,6 +97,11 @@ small {
 
 .dark{
   background-color: #2d2d2d;
-  color: #e6e6e6;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.113);
+  color: #ebebeb;
+}
+
+.dark-todos {
+  background-color: #4a4a4a75;
+  color: #ebebeb;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.397);
 }
